# memory-clock

./: .gitignore  CMakeLists.txt  Makefile  README.md  add-device.py  env.example  reterminal-e1001-details.md  sdkconfig  sdkconfig.defaults  server.py  tasking.md
assets/icons/: NOTICE
core/: clock_app.c  clock_app.h  clock_config.h  ui.c  ui.h
main/: CMakeLists.txt  banner.c  banner.h  clock_client.c  clock_client.h  display_port.c  display_port.h  font_assets.c  font_assets.h  font_render.c  font_render.h  image_store.c  image_store.h  logo_bits.xbm  main.c  provisioning.c  provisioning.h  status.c  status.h  status_icons.h  wifi_env.h.in
server/: Dockerfile  README.md  clock_server.py  dump_clock_pages.py  preview-clock-pages.sh  test-calendar.yaml
sim/: .gitignore  CMakeLists.txt  README.md  lv_conf.h
sim/sample/: config.json
sim/src/: config_loader.c  config_loader.h  main.c
tools/: generate_fonts.c  render_status_icons.sh
